# collage_maker

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
